--- a/Painter/requirements.txt
+++ b/Painter/requirements.txt
@@ -1,7 +1,10 @@
 timm==0.3.2
 git+https://github.com/cocodataset/panopticapi.git
+git+https://github.com/facebookresearch/detectron2.git
 h5py  # for depth
 xtcocotools # for pose
 natsort  # for denoising
 wandb
 tensorboard
+iopath
+fairscale
